# AI-Content-Moderation-Platform

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-ci.yaml  docker-compose-prebase.yml  docker-compose-prod.yaml  docker-compose.yaml  package-lock.json  pyproject.toml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 23adfded44af_rename_to_apikey.py  36ee8e0fc571_fix_typo_in_content_analysis.py  4d46e2b92f09_add_documents_paths_to_content.py  5ae24bc0ad67_add_image_paths.py  825e19d5ae0d_.py  af0763262b35_initial_content_table.py  be59dfc534f4_.py  dda0a8c1fe23_add_google_user.py  dfab2bd6f44c_add_filename.py  f53c799ff13b_add_client_access.py
backend/docker/: Dockerfile.base
backend/logging/: dev.conf  prod.conf
backend/scripts/on_start/: __init__.py  load_clients_to_redis.py  load_fixtures.py
backend/src/moderation/: __init__.py  app.py  main.py  openapi.yaml
backend/src/moderation/ai/: audio.py  flag.py  image.py  models.py  pii.py  text.py  video.py
backend/src/moderation/auth/: apikey.py  common.py  jwt.py
backend/src/moderation/cache/: redis.py
backend/src/moderation/celery/: celery.py  tasks.py
backend/src/moderation/constants/: cache.py  general.py
backend/src/moderation/core/: container.py  settings.py
backend/src/moderation/db/: __init__.py  access.py  analysis.py  client_api_key.py  content.py  content_.py  customer_user.py  moderation.py  report.py  session.py  user.py
backend/src/moderation/helpers/: jwt_token.py
backend/src/moderation/jwt/: jwt_handler.py
backend/src/moderation/kafka/: consumer.py  models.py  processor.py  producer.py
backend/src/moderation/mailer/: __init__.py
backend/src/moderation/middlewares/: cors.py
backend/src/moderation/models/: classification.py
backend/src/moderation/pagination/: basic.py
backend/src/moderation/parsers/: audio.py  documents.py  urls.py  video.py
backend/src/moderation/pipelines/: __init__.py  documents.py  enums.py  image.py  pipeline.py  postprocessors.py  preprocessors.py  text.py  video.py
backend/src/moderation/routes/: api_keys.py  auth.py  content.py  dashboard.py  diagnostics.py  health.py  helper.py  moderation_action.py  user.py
backend/src/moderation/scripts/: download_ai_models.py  load_fixtures.py
backend/src/moderation/sentry/: send.py
backend/src/moderation/service/: __init__.py  analysis.py  auth.py  client_api_key.py  (+6 more)
backend/test/: conftest.py
backend/test/integration/: conftest.py
(+150 files in other folders)
