[project]
name = "moderation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "connexion[flask,swagger-ui,uvicorn]>=3.2.0",
    "kafka-python>=2.1.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
    "dependency-injector>=4.46.0",
    "pillow>=11.2.1",
    "python-json-logger>=3.3.0",
    "pyjwt>=2.10.1",
    "redis==4.5.4",
    "faker>=37.3.0",
    "pytest>=8.3.5",
    "types-redis>=4.6.0.20241004",
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
    "presidio-anonymizer>=2.2.358",
    "presidio-analyzer>=2.2.358",
    "pytest-env>=1.1.5",
    "bcrypt>=4.3.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
    "opencv-python>=4.11.0.86",
    "pydub>=0.25.1",
    "pytest-asyncio>=1.0.0",
    "authlib>=1.6.0",
    "celery[redis]==5.3.6",
    "protobuf>=6.31.1",
    "sentry-sdk[flask]>=2.30.0",
    "celery-stubs>=0.1.3",
    "resend>=2.10.0",
]
